--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="334.0" prefWidth="451.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="360.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label text="Seller Registration">
          <font>
@@ -26,10 +26,13 @@
       </ToolBar>
       <TableView fx:id="tableViewSeller" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="86.0" />
-            <TableColumn fx:id="tableColumnREMOVE" prefWidth="96.0" />
+          <TableColumn fx:id="tableColumnId" prefWidth="48.0" text="Id" />
+          <TableColumn fx:id="tableColumnName" prefWidth="124.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="86.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="98.0" text="Birth Date" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="101.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="60.0" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="57.0" />
         </columns>
       </TableView>
    </children>
